# Rust-File-Organizer

./: CHANGELOG.md  Cargo.toml  LICENSE.rtf  README.md  cliff.toml  installer.iss
.github/workflows/: create-release.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml
github/workflows/: release.yml
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs  operation.rs
src/handlers/: init.rs  mod.rs  process.rs  result.rs  runner.rs
src/models/: file.rs  file_type.rs  mod.rs  organized_file.rs  paths.rs  save_state.rs
src/organizer/: mod.rs  processor.rs  scanner.rs
src/save/: mod.rs
src/ui/: dialogs.rs  mod.rs  output.rs  progress.rs
src/utils/: mod.rs  paths.rs
wix/: main.wxs
