[package]
name = "file-organizer"
version = "0.3.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A powerful, cross-platform file organization tool"
repository = "https://github.com/yourusername/file-organizer"
license = "MIT"
readme = "README.md"
keywords = ["file", "organization", "utility", "cli", "tui"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
chrono = "0.4.40"
dirs = "6.0.0"
rfd = "0.15.3"
colored = "2.1.0"
rayon = "1.10.0"
dialoguer = "0.11.0"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4.1"
ratatui = "0.24.0"
crossterm = "0.27.0"

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[unreleased]: https://github.com/USERNAME/REPO/compare/{{tag_name}}...HEAD", exactly = 1 },
]
